[package]
name = "chilon_rs"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
rio_turtle = { path = "/home/andrefs/Projects/3rd_party/oxigraph/rio/turtle/", version = "0.7.1"}
rio_api = { path = "/home/andrefs/Projects/3rd_party/oxigraph/rio/api/", version = "0.7.1"}
bzip2 = "0.4.3"
clap = {version = "4.0.18", features = ["derive"]}
num_cpus = "1.13.1"
rayon = "1.6.0"
ureq = "2.5.0"
regex = "1"
serde = {version = "1.0.87", features = ["derive"]}
serde_json = "1.0"
qp-trie = "0.8.0"
log = "0.4.0"
simple_logger = {version = "4.0.0", features = ["stderr"]}
url = "2.3.1"
rand = "0.8.5"
unicode-segmentation = "1.10.0"
oxigraph = "0.3.10"
tera = "1.17.1"
chrono = "0.4.23"
# spinners = "4.1.0"
